feat: setted swagger for reset password
