# swagger/swagger.json
@@ -95,35 +95,72 @@
                     }
                 }
             }
-        },
-
+        },      
         "/forgotPassword": {
             "post": {
                 "tags": [
-                    "FundooNotes"
+                    "FundooNotes forgotPassword"
                 ],
-                "summary": "Forgot Password",
+                "Summary": "user receives an email about link to reset password",
                 "parameters": [
                     {
+                        "name": "email",
                         "in": "body",
-                        "name": "body",
-                        "description": "forgot password"
-                    }
-                ],
-                "produces": [
-                    "application/json"
+                        "schema": 
+                        {
+                            "$ref": "#/definitions/forgotPassword"
+                        }
+                    }        
                 ],
                 "responses": {
                     "200": {
-                        "description": "sent mail successfully"
+                        "description": "Successful"
                     },
                     "400": {
-                        "description": "unable to send mail"
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "505": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
+        },
+        "/resetPassword": {
+            "put": {
+                "tags": [
+                    "FundooNotes resetPassword"
+                ],
+                "Summarry": "reset password",
+                "parameters": [
+                    {
+                        "name": "resetPassword",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/resetPassword"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "Unauthorized User"
+                    },
+                    "500": {
+                        "description": "Internal Error"
                     }
                 }
             }
         }
-    },  
+    },
         "definitions": {
             "add": {
                 "type": "object",
@@ -157,6 +194,23 @@
                         "type": "string"
                     }
                 }
+            },
+            "forgotPassword": {
+                "type": "object",
+                "properties": {
+                    "email": {
+                        "type": "string"
+                    }
+                }
+            },
+            "resetPassword": {
+                "type": "object",
+                "properties": {
+                    "password": {
+                        "type": "string"
+                    }
+                }
             }
+
         }
 }
